--- a/Heatmapper/View/Base.lproj/Main.storyboard
+++ b/Heatmapper/View/Base.lproj/Main.storyboard
@@ -1014,11 +1014,11 @@ DQoNCg
                                             <constraint firstAttribute="height" constant="50" id="afh-lc-bSS"/>
                                         </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="CU9-5G-Mh9" userLabel="Controls Middle Stack View">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="CU9-5G-Mh9" userLabel="Controls Middle Stack View">
                                         <rect key="frame" x="0.0" y="50" width="410" height="50"/>
                                         <subviews>
-                                            <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7U9-Pn-MJX" userLabel="Map, Satellite">
-                                                <rect key="frame" x="0.0" y="0.0" width="150" height="51"/>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7U9-Pn-MJX" userLabel="Map, Satellite">
+                                                <rect key="frame" x="0.0" y="0.0" width="130" height="51"/>
                                                 <segments>
                                                     <segment title="Map"/>
                                                     <segment title="Sat"/>
@@ -1027,11 +1027,8 @@ DQoNCg
                                                     <action selector="segMap:" destination="vbg-Le-o0h" eventType="valueChanged" id="LmW-wm-KMf"/>
                                                 </connections>
                                             </segmentedControl>
-                                            <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="S3c-ue-W2b">
-                                                <rect key="frame" x="160" y="0.0" width="120" height="51"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="v3e-Fo-r0E"/>
-                                                </constraints>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="S3c-ue-W2b">
+                                                <rect key="frame" x="140" y="0.0" width="130" height="51"/>
                                                 <segments>
                                                     <segment title="Pitch"/>
                                                     <segment title="Off"/>
@@ -1040,11 +1037,8 @@ DQoNCg
                                                     <action selector="segPitch:" destination="vbg-Le-o0h" eventType="valueChanged" id="qId-SC-2Hh"/>
                                                 </connections>
                                             </segmentedControl>
-                                            <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cWZ-Az-CbX" userLabel="Panel Seg Control">
-                                                <rect key="frame" x="290" y="0.0" width="120" height="51"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="Zq7-Ln-UAA"/>
-                                                </constraints>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cWZ-Az-CbX" userLabel="Panel Seg Control">
+                                                <rect key="frame" x="280" y="0.0" width="130" height="51"/>
                                                 <segments>
                                                     <segment title="Panel"/>
                                                     <segment title="Hide"/>
